--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 
     <section id="home" class="background">
         <div class="content">
-          <img src="images/vichar majhe1.png" alt="hi" class="inline"/>
+          <img src="images/vichar majhe1.png" width="100px" height="100px" alt="hi" class="inline"/>
             <h1>माझ्या मामाला वाढदिवसाच्या शुभेच्छा</h1>
             <p>आपल्या जीवनात आनंद, समृद्धी, आणि आरोग्य लाभो!</p>
         </div>
